corpus/cpp/ranges_views/case-01/snapshots/gcc15_plus/dual_sink_structured/render.verbose.txt
error: [ranges_views] C++20 ranges or views error @ src/main.cpp:4:22
help: check that the range/iterator models the required concept (input_range, forward_range, etc.)
raw : no match for 'operator|' (operand types are 'int' and 'std::ranges::views::__adaptor::_Partial<std::ranges::views::_Take, int>')
| src/main.cpp:4:22
|     auto result = 42 | std::views::take(2);
|                      ^
template: /usr/local/include/c++/15.2.0/ranges:981:5 candidate 1: 'template<class _Lhs, class _Rhs>  requires (__is_range_adaptor_closure<_Lhs>) && (__is_range_adaptor_closure<_Rhs>) constexpr auto std::ranges::views::__adaptor::operator|(_Lhs&&, _Rhs&&)'
template: /usr/local/include/c++/15.2.0/ranges:981:5 template argument deduction/substitution failed:
template: /usr/local/include/c++/15.2.0/ranges:972:5 candidate 2: 'template<class _Self, class _Range>  requires (__is_range_adaptor_closure<_Self>) && (__adaptor_invocable<_Self, _Range>) constexpr auto std::ranges::views::__adaptor::operator|(_Range&&, _Self&&)'
template: /usr/local/include/c++/15.2.0/ranges:972:5 template argument deduction/substitution failed:
note: candidate 1: 'template<class _Lhs, class _Rhs>  requires (__is_range_adaptor_closure<_Lhs>) && (__is_range_adaptor_closure<_Rhs>) constexpr auto std::ranges::views::__adaptor::operator|(_Lhs&&, _Rhs&&)'
note: template argument deduction/substitution failed:
note: constraints not satisfied
note: the required expression 'std::ranges::views::__adaptor::__is_range_adaptor_closure_fn(__t, __t)' is invalid
note: set '-fconcepts-diagnostics-depth=' to at least 2 for more detail
note: candidate 2: 'template<class _Self, class _Range>  requires (__is_range_adaptor_closure<_Self>) && (__adaptor_invocable<_Self, _Range>) constexpr auto std::ranges::views::__adaptor::operator|(_Range&&, _Self&&)'
note: the required expression 'declval<_Adaptor>()((declval<_Args>)()...)' is invalid
note: omitted 2 additional note(s)
debug: rule_id=rule.family.ranges_views.structured_or_message
debug: matched_conditions=message_contains=std::ranges::, child_message_contains=std::ranges::
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output